src/test/deca/context/valid/if-true-print-hello.deca
// Description:
//    test condition (if) et println
//
// Resultats:
//    
//    
// 
// Historique:
//    cree le 01/01/2025

{
   if (true){
      println("hello");
   }
}